fixed bug when font size is too big

--- a/www/css/playground.css
+++ b/www/css/playground.css
@@ -50,6 +50,7 @@ html[data-theme='dark'] {
 
 .v-playground .playground__editor {
     position: relative;
+    max-width: 100vw;
 }
 
 .CodeMirror {
